updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a young entrepeneur from Miami looking to learn and become a software engineer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Miami</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My Hobbies are Playing Video Games and Coding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Sofwate engineer at Google</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Miami, Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Interesting and lucrative career</p>
     </section>
 
     <footer id="footer">
