--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Where I'm From</h1>
       <p>Miami</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My Hobbies are Playing Video Games and Coding</p>
+      <p>My hobbies are playing Video Games and Coding</p>
       <h1>What's your dream job?</h1>
-      <p>Sofwate engineer at Google</p>
+      <p>Sofware engineer at Google</p>
       <h1>Where do you live?</h1>
       <p>Miami, Florida</p>
       <h1>Why do you want to be a web developer?</h1>
